[#31] Chore: 사용하지 않는 변수 제거